add: installable binary
add 'bin/main.rs' to make `which-rs` installable via `cargo`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,15 @@
 [package]
-name = "which"
+name = "which_cli"
 version = "7.0.1"
 edition = "2021"
 rust-version = "1.70"
-authors = ["Harry Fei <tiziyuanfang@gmail.com>, Jacob Kiesel <jake@bitcrafters.co>"]
-repository = "https://github.com/harryfei/which-rs.git"
-documentation = "https://docs.rs/which/"
+authors = ["ParkSnoopy <117149837+ParkSnoopy@users.noreply.github.com>"]
+repository = "https://github.com/ParkSnoopy/which-rs.git"
 license = "MIT"
 description = "A Rust equivalent of Unix command \"which\". Locate installed executable in cross platforms."
 readme = "README.md"
-categories = ["os", "filesystem"]
-keywords = ["which", "which-rs", "unix", "command"]
+categories = ["os", "filesystem", "cli"]
+keywords = ["which", "which-rs", "unix", "command", "cli"]
 
 [features]
 regex = ["dep:regex"]
@@ -35,3 +34,8 @@ tempfile = "3.9.0"
 
 [package.metadata.docs.rs]
 all-features = true
+
+
+[[bin]]
+name = "which"
+path = "src/bin/main.rs"
